fixing layout shift up - delay label was removed

--- a/apps/client/src/features/rundown/time-input-flow/TimeInputFlow.module.scss
+++ b/apps/client/src/features/rundown/time-input-flow/TimeInputFlow.module.scss
@@ -40,12 +40,15 @@
 }
 
 .disabledInput {
+  box-sizing: border-box;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   height: 2rem;
   min-width: 6.5em;
   max-width: 6.5em;
+  padding-inline: 0.5em;
+  border: 1px solid transparent;
   color: $gray-600;
   opacity: 0.4;
 }
